# my-package

./: .cruft.json  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml
src/my_package/: __init__.py  api.py  cli.py
tests/: __init__.py  test_api.py  test_cli.py  test_import.py
