[build-system]  # https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]  # https://python-poetry.org/docs/pyproject/
name = "my-package"
version = "0.0.0"
description = "A Python package that demos Poetry Cookiecutter."
authors = ["Laurent Sorber <laurent@radix.ai>"]
readme = "README.md"
repository = "https://github.com/radix-ai/my-package"

[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump(release): v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version = "0.0.0"
version_files = ["pyproject.toml:version"]

[tool.poetry.scripts]  # https://python-poetry.org/docs/pyproject/#scripts
my-package = "my_package.cli:app"

[tool.poetry.dependencies]  # https://python-poetry.org/docs/dependency-specification/
coloredlogs = "^15.0.1"
fastapi = "^0.78.0"
gunicorn = "^20.1.0"
poethepoet = "^0.16.0"
pydantic = "^1.9.1"
python = "^3.8"
typer = { extras = ["all"], version = "^0.6.1" }
uvicorn = { extras = ["standard"], version = "^0.18.2" }

[tool.poetry.group.test.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
absolufy-imports = "^0.3.1"
bandit = { extras = ["toml"], version = "^1.7.4" }
black = "^22.6.0"
commitizen = "^2.27.1"
coverage = { extras = ["toml"], version = "^6.4.1" }
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-bugbear = "^22.6.22"
flake8-comprehensions = "^3.10.0"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
Flake8-pyproject = "^1.1.0"
flake8-pytest-style = "^1.6.0"
flake8-rst-docstrings = "^0.2.6"
flake8-tidy-imports = "^4.8.0"
isort = "^5.10.1"
mypy = "^0.961"
pep8-naming = "^0.13.0"
pre-commit = "^2.19.0"
pydocstyle = { extras = ["toml"], version = "^6.1.1" }
pytest = "^7.1.2"
pytest-clarity = "^1.0.1"
pytest-mock = "^3.8.1"
pytest-xdist = "^2.5.0"
pyupgrade = "^2.34.0"
safety = "^2.1.1"
shellcheck-py = "^0.8.0"
typeguard = "^2.13.3"
yesqa = "^1.4.0"

[tool.poetry.group.dev.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
cruft = "^2.11.0"
pdoc = "^12.0.2"

[tool.bandit]  # https://bandit.readthedocs.io/en/latest/config.html
skips = ["B101"]

[tool.black]  # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 100
target-version = ["py38"]

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.flake8]  # https://flake8.pycqa.org/en/latest/user/options.html#options-and-their-descriptions
color = "always"
docstring_style = "numpy"
doctests = true
ignore = ["DAR103", "E203", "E501", "W503"]
max_line_length = 100
max_complexity = 10
strictness = "short"

[tool.isort]  # https://pycqa.github.io/isort/docs/configuration/options.html
color_output = true
line_length = 100
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
junit_xml = "reports/mypy.xml"
plugins = "pydantic.mypy"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pydantic-mypy]  # https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pydocstyle]  # http://www.pydocstyle.org/en/latest/usage.html#configuration-files
convention = "numpy"

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --typeguard-packages=my_package --verbosity=2 --junitxml=reports/pytest.xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["src", "tests"]
xfail_strict = true

[tool.poe.tasks]  # https://github.com/nat-n/poethepoet

  [tool.poe.tasks.dev]
  help = "Serve a REST API in development"
  cmd = """
    uvicorn
      --host 0.0.0.0
      --port $port
      --reload
      my_package.api:app
    """

    [[tool.poe.tasks.dev.args]]
    help = "Bind socket to this port (default: 8000)"
    name = "port"
    options = ["--port"]
    default = "8000"

  [tool.poe.tasks.docs]
  help = "Generate this package's docs"
  cmd = """
    pdoc
      --docformat $docformat
      --output-directory $outputdirectory
      my_package
    """

    [[tool.poe.tasks.docs.args]]
    help = "The docstring style (default: numpy)"
    name = "docformat"
    options = ["--docformat"]
    default = "numpy"

    [[tool.poe.tasks.docs.args]]
    help = "The output directory (default: docs)"
    name = "outputdirectory"
    options = ["--output-directory"]
    default = "docs"

  [tool.poe.tasks.lint]
  help = "Lint this package"

    [[tool.poe.tasks.lint.sequence]]
    cmd = """
      pre-commit run
        --all-files
        --color always
      """

    [[tool.poe.tasks.lint.sequence]]
    shell = "safety check --continue-on-error --full-report"

  [tool.poe.tasks.serve]
  help = "Serve a REST API in production"
  cmd = """
    gunicorn
      --access-logfile -
      --bind 0.0.0.0:$port
      --graceful-timeout 10
      --keep-alive 10
      --log-file -
      --timeout 30
      --worker-class uvicorn.workers.UvicornWorker
      --worker-tmp-dir /dev/shm
      --workers 2
      my_package.api:app
    """
  use_exec = true

    [[tool.poe.tasks.serve.args]]
    help = "Bind socket to this port (default: 8000)"
    name = "port"
    options = ["--port"]
    default = "8000"

  [tool.poe.tasks.test]
  help = "Test this package"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage run"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage report"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage xml"
